src/test/ui/imports/issue-28388-2.rs
// Prefix in imports with empty braces should be resolved and checked privacy, stability, etc.

mod m {
    mod n {}
}

use m::n::{};
//~^ ERROR module `n` is private

fn main() {}
